config-root/namespaces/apps/godemo48/service.yaml
# Source: godemo48/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: godemo48
  namespace: myapps
  labels:
    chart: "godemo48-0.0.10"
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: godemo48-godemo48
