config-root/namespaces/apps/godemo48/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  creationTimestamp: null
  name: godemo48
  namespace: myapps
spec:
  rules:
  - host: godemo48.34.76.100.223.nip.io
    http:
      paths:
      - backend:
          serviceName: godemo48
          servicePort: 80
status:
  loadBalancer: {}
